v2.8.2   - Removed incorrect error when buffers were full.
	 - Added routine to print out decode status in natural
	   language instead of a code.

v2.8.1   - Improved playback of movies sometimes when pts was skipping
	   a frame.
	 - Minor speeding up in movie playback.
	 - Bug fixed playback of image sequences with attached sound,
	   which would freeze on a frame.
	 - Added the option to offset the attached audio file so as to
	   sync the audio without cutting the original clip.
	 - Documented RMB menu options.
	 - Turned off PostgreSQL database driver on Linux by default 
	   so as to avoid errors on startup for new users.
	 - Fixed crash on wrong locale.  Now it exits gracefully.

v2.8.0   - Bug fixed playback in reverse to not use so much memory.
	 - Retrofit previous algorithm for movie playback as new 
	   algorithm was not frame accurate.
	 - Bug fixed playback of one sample movie (PoTC.VOB), which
	   would start with frame frozen.
	 - Bug fixed movies that had B frames in it and would show 
	   incorrectly.

v2.7.9   - Bug fixed start frame on BG image, which would offset by 1 
	   frame.
	 - Added display of FG and BG images to title bar.  Previously,
	   this would only be used when edl was on.
	 - Improved performance of seek in video playback and scrubbing.
	 - Improved performance of reverse playback.
	 - Reverse playback is now frame accurate, instead of being
	   shifted by one frame.

v2.7.8   - Fixed hangs and crashes on playback of single images in EDL.
	 - Fixed file requester not showing negative frames correctly.
	 - Fixed file association for jpg, png, tiff, and others on Linux 
	   installers.
	 - Fixed ImageMagick saving.  Gamma is baked in instead of passed
	   to image attribute.
	 - Made ImageMagick loader load all images as gamma 1.0, 
	   regardless, as it incorrectly tags images as gamma 0.4545.
	 - Fixed Clone Image crash due to wrong path check.
	 - Fixed Clone Image not cloning CTL's IDT transform.