@@ -111,7 +111,7 @@ namespace mrv {
 
       static bool open_movie( const char* filename, const CMedia* img,
                               const AviSaveUI* opts );
-       static bool save_movie_frame( CMedia* img );
+      static bool save_movie_frame( CMedia* img );
        static bool close_movie( const CMedia* img );
 
        bool save_frame( const mrv::image_type_ptr pic );
